# scaffold-cli

./: .gitignore  CONTRIBUTING.md  License  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/scaffold_cli/: cli.py
src/scaffold_cli/commands/: init.py
src/scaffold_cli/core/: installer.py  orchestrator.py  project_types.py  quick_templates.py
src/scaffold_cli/detectors/: project_detector.py
src/scaffold_cli/generators/: docker_generator.py  env_generator.py
src/scaffold_cli/utils/: command_runner.py  git.py
src/scaffold_cli/validators/: dependencies.py
tests/: test_cli.py  test_dependencies.py  test_init_command.py  test_orchestrator.py  test_project_types.py
