[project]
name = "scaffold-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Njau-dev",email = "jeffnjau01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "rich (>=14.2.0,<15.0.0)",
    "questionary (>=2.1.1,<3.0.0)"
]

[project.scripts]
scaffold = "scaffold_cli.cli:app"

[tool.poetry]
packages = [{include = "scaffold_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"
black = ">=25.11.0,<26.0.0"