[project]
name = "scaffold-cli"
version = "0.1.0"
description = "A modern CLI tool for quickly scaffolding development projects"
authors = [
    {name = "Njau-dev", email = "jeffnjau01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["cli", "scaffold", "template", "generator", "project", "boilerplate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.20.0,<0.21.0",
    "rich>=14.2.0,<15.0.0",
    "questionary>=2.1.1,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "black>=25.11.0,<26.0.0",
    "pytest-cov>=6.0.0,<7.0.0"
]

[project.scripts]
scaffold = "scaffold_cli.cli:app"

[project.urls]
Homepage = "https://github.com/Njau-dev/scaffold-cli"
Repository = "https://github.com/Njau-dev/scaffold-cli"
Issues = "https://github.com/Njau-dev/scaffold-cli/issues"
Documentation = "https://github.com/Njau-dev/scaffold-cli#readme"

[tool.poetry]
packages = [{include = "scaffold_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"
black = ">=25.11.0,<26.0.0"
pytest-cov = ">=6.0.0,<7.0.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=scaffold_cli --cov-report=term-missing"